# trends-alpha-engine

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
docs/: architecture.md  deployment.md  testing.md
src/tae/: __init__.py  cli.py  config.py  universe.py
src/tae/backtesting/: __init__.py  engine.py  metrics.py
src/tae/connectors/: __init__.py  fallback.py  sec.py  yahoo.py
src/tae/db/: __init__.py  init_db.py  models.py  session.py
src/tae/forecast/: __init__.py  engine.py  testing.py
src/tae/forecasting/: __init__.py  alpha_validation.py  backtest.py  empirical.py  engine.py  institutional.py  models.py  outcomes.py  point_in_time.py  universe.py  validation.py
src/tae/portfolio/: __init__.py  engine.py
src/tae/scoring/: __init__.py  components.py  engine.py  fundamentals.py  models.py
src/tae/screening/: __init__.py  screener.py
src/tae/watchlists/: __init__.py  changes.py
tests/: test_alpha_validation.py  test_backtesting.py  test_empirical_forecasting.py  test_forecast.py  test_forecasting.py  test_institutional.py  test_point_in_time.py  test_scoring.py  test_streamlit_app_fallback.py  test_universe_backtest.py  test_validation.py  test_yahoo_connector.py
